versioned_docs/version-2.17/reference/targets/helm_deployment.mdx
---
title: helm_deployment
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A Helm chart deployment.

Backend: <span className="color--primary">`pants.backend.experimental.helm`</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#coderelease_namecode}
</div>

## `release_name`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Name of the release used in the deployment. If not set, the target name will be used instead.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedependenciescode}
</div>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. `['helloworld/subdir:lib', 'helloworld/main.py:lib', '3rdparty:reqs#django']`.

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `scie-pants-linux-x86_64 dependencies` or `scie-pants-linux-x86_64 peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.17/docs/targets for more about how addresses are formed, including for generated targets. You can also run `scie-pants-linux-x86_64 list ::` to find all addresses in your project, or `scie-pants-linux-x86_64 list dir` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesourcescode}
</div>

## `sources`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`('*.yaml', '*.yml')`}
>

Helm configuration files for a given deployment.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codenamespacecode}
</div>

## `namespace`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Kubernetes namespace for the given deployment.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_crdscode}
</div>

## `skip_crds`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, then does not deploy the Custom Resource Definitions that are defined in the chart.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codevaluescode}
</div>

## `values`

<Field
    type_repr={`Dict[str, str] | None`}
    default_repr={`None`}
>

Individual values to use when rendering a given deployment.

Value names should be defined using dot-syntax as in the following example:

```
helm_deployment(
    values={
        "nameOverride": "my_custom_name",
        "image.pullPolicy": "Always",
    },
)
```

Values can be dynamically calculated using interpolation as shown in the following example:

```
helm_deployment(
    values={
        "configmap.deployedAt": "{env.DEPLOY_TIME}",
    },
)
```

Check the Helm backend documentation on what are the options available and its caveats when making usage of dynamic values in your deployments.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codecreate_namespacecode}
</div>

## `create_namespace`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, the namespace will be created if it doesn&#x27;t exist.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeno_hookscode}
</div>

## `no_hooks`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, none of the lifecycle hooks of the given chart will be included in the deployment.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetimeoutcode}
</div>

## `timeout`

<Field
    type_repr={`int | None`}
    default_repr={`None`}
>

Timeout in seconds when running a Helm deployment.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codepost_rendererscode}
</div>

## `post_renderers`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

List of runnable targets to be used to post-process the helm chart after being rendered by Helm.

This is equivalent to the same post-renderer feature already available in Helm with the difference that this supports a list of executables instead of a single one.

When more than one post-renderer is given, they will be combined into a single one in which the input of each of them would be output of the previous one.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeenable_dnscode}
</div>

## `enable_dns`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

Enables DNS lookups when using the `getHostByName` template function.

</Field>

</span>
